tests/typing/good/testfile-field-1.scala
class A { var x = 0 }
class B extends A { var y = x }
object Main { def main(args: Array[String]) { } }
