tests/typing/bad/testfile-unbound_var-1.scala
class A { def m() { var x = y } }
object Main { def main(args: Array[String]) { } }
